# ComputationGraph

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-single-platform-clang.yml  cmake-single-platform-gnu.yml  cmake-single-platform-windows.yml  cmake-single-platform.yml
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt
Core/Lib/: CMakeLists.txt
Core/Tests/: CMakeLists.txt
Core/Tests/network/: neural_network_test.cpp
Core/include/core/: PointerMap.hpp  Recursion.hpp  Typelist.hpp  Types.hpp
Core/include/network/: Exceptions.hpp  LayerDefinition.hpp  NeuralNetwork.hpp  OperationTypelist.hpp  Session.hpp
Core/include/nodes/: Initializers.hpp  Node.hpp  OperationNode.hpp  PlaceholderNode.hpp  ValueNode.hpp
Core/include/nodes/initializers/: Xavier.inl
Core/include/nodes/operations/: AdditionOperation.hpp  LogOperation.hpp  MatrixMultiplyOperation.hpp  MultiplyOperation.hpp  NegateOperation.hpp  ReLUOperation.hpp  ReduceSumOperation.hpp  SoftmaxOperation.hpp
Core/include/nodes/optimizers/: GradientComputation.hpp  SGDOptimizer.hpp
Core/src/network/: NeuralNetwork.cpp  Session.cpp
Core/src/nodes/: Node.cpp  OperationNode.cpp  ValueNode.cpp
Core/src/nodes/operations/: AdditionOperation.cpp  LogOperation.cpp  MatrixMultiplyOperation.cpp  MultiplyOperation.cpp  NegateOperation.cpp  ReLUOperation.cpp  ReduceSumOperation.cpp  SoftmaxOperation.cpp
Core/src/nodes/optimizers/: GradientComputation.cpp  SGDOptimizer.cpp
cmake/: accept_typelist.sh  generate_operation.sh  generate_typelist.sh
